# geniro-graphiti-mcp

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.geniro/: safety.json
.geniro/planning/graphiti-mcp-py/: spec.md  state.md
.geniro/state/handoff/: from-review-claude-geniro-fork-dynamic-workflows-criwgf.md
.github/workflows/: ci.yml  release.yml
src/graphiti_mcp/: __init__.py  config.py  engine.py  errors.py  models.py  providers.py  server.py
src/graphiti_mcp/tools/: __init__.py  _common.py  admin.py  episodes.py  graph.py  groups.py  search.py
tests/: conftest.py
tests/integration/: test_roundtrip.py
tests/unit/: conftest.py  test_config.py  test_episodes.py  test_errors.py  test_graph_admin.py  test_groups.py  test_providers.py  test_search.py  test_server_wrappers.py
