[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geniro-graphiti-mcp"
version = "0.1.0"
description = "A clean-room Graphiti MCP server for the Claude CLI: embeds graphiti-core and writes to Neo4j synchronously, with no silent-drop queue."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Geniro" }]
keywords = ["mcp", "graphiti", "neo4j", "knowledge-graph", "memory", "claude"]

dependencies = [
    "graphiti-core>=0.29.2,<0.30",
    "mcp>=1.0",
    "openai>=1.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
# Native Anthropic LLM support. Without this extra, LLM_PROVIDER=anthropic raises
# a clear configuration error pointing here.
anthropic = ["graphiti-core[anthropic]>=0.29.2,<0.30"]
# Voyage embeddings.
voyage = ["graphiti-core[voyage]>=0.29.2,<0.30"]

[project.scripts]
graphiti-mcp = "graphiti_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "testcontainers[neo4j]>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/graphiti_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that require Docker (testcontainers-backed Neo4j)",
]

[tool.uv]
# dev group installed by default with `uv sync`
default-groups = ["dev"]
